--- a/css/custom.css
+++ b/css/custom.css
@@ -43,7 +43,7 @@
   --primary-color: #192324;
   --secondery-color: #f8f8f8;
   --text-color: #283132;
-  --accent-color: black;
+  --accent-color: grey;
   --white-color: #ffffff;
   --divider-color: #eaf0ec;
   --dark-divider-color: #ffffff1a;
